# doc_manager

./: .gitignore  Cargo.toml  README.md  build.rs  data.db  data_bak.db
data/5/: 5_6
src/: attachment.rs  attachment_page.rs  db.rs  document.rs  main.rs  screen.rs  ui_handler.rs
src/screen/: attachment.rs  document.rs  document_list.rs  main_menu.rs  settings.rs
