[package]
name = "doc_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
features = "0.10.0"
file-format = "0.28.0"
hide_console_ng = "0.1.0"
iced = { version = "0.14.0", features = ["advanced", "image", "smol"] }
iced-multi-window = "2.0.0"
iced_aw = { version = "0.13.0", features = ["full"] }
iced_dialog = "0.14.0"
image = "0.25.9"
libcaesium = "0.20.0"
log = "0.4.29"
log4rs = "1.4.0"
rfd = "0.16.0"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "parsing"] }
toml = "0.9.8"
